force-app/main/default/objects/Task_spec_group__c/Task_spec_group__c.object-meta.xml
<CustomObject>
    <description>Represents a collection of task specs for a particular object (e.g. Opportunity), used to create a set of actual tasks</description>
    <label>Task spec group</label>
    <nameField>
        <label>Task spec group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task spec groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>