force-app/main/default/objects/Task_spec_group__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this task spec group</description>
    <inlineHelpText>Description of this task spec group</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>