force-app/main/default/objects/Task_spec_group__c/fields/Object_name__c.field-meta.xml
<CustomField>
    <fullName>Object_name__c</fullName>
    <description>The name of the Salesforce object to which this task spec group applies</description>
    <inlineHelpText>The name of the Salesforce object to which this task spec group applies</inlineHelpText>
    <label>Object name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Fund__c</fullName>
            </value>
            <value>
                <fullName>Allocation__c</fullName>
            </value>
            <value>
                <fullName>Invite__c</fullName>
            </value>
            <value>
                <fullName>Proposal__c</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>