force-app/main/default/objects/Task_spec_group__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this task spec group</description>
    <inlineHelpText>The type of this task spec group</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object_name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restricted Fund Checklist - option</fullName>
            </value>
            <value>
                <fullName>Restricted Fund Checklist - required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>